--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.3",
+    "jquery": "^3.7.1",
     "primeng": "^16.4.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
